# sparse_grassmann_llm

./: README.md  main.py  prompt.py  pyproject.toml
data/: __init__.py  datasets.py  tokenizer.json
eval/: bench_inference.py  bench_results.csv  bench_results.json  vram_scaling.py
eval/results/: vram_scaling.csv  vram_scaling.json
models/: __init__.py  blocks.py  grassmann_sparse.py  transformer_baseline.py
report/: report.aux  report.out  report.tex
scripts/: plot_results.py
train/: __init__.py  snli_finetune.py  train_lm.py
utils/: __init__.py  sparsity.py  tokenizer.py
