[project]
name = "sparse-grassmann-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=4.6.0",
    "matplotlib>=3.10.8",
    "tensorboardx>=2.6.4",
    "tokenizers>=0.22.2",
    "torch==2.3.1+cu121",
    "torchaudio==2.3.1+cu121",
    "torchvision==0.18.1+cu121",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
