[project]
name = "sparse-grassmann-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=3.0.0",
    "huggingface-hub>=0.24.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0,<2.0",
    "pyarrow>=15.0.0",
    "tensorboardx>=2.6.0",
    "tokenizers>=0.19.0",
    "torch==2.3.1+cu121",
    "torchaudio==2.3.1+cu121",
    "torchvision==0.18.1+cu121",
    "tqdm>=4.65.0",
]

# PyTorch CUDA wheels — explicit so only torch/torchaudio/torchvision use it
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch       = { index = "pytorch-cu121" }
torchaudio  = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
